# aurex

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/aurum-broker/: Cargo.toml
crates/aurum-broker/src/: lib.rs
crates/aurum-broker/src/in_memory/: amqp_harness.rs  amqp_harness_tests.rs  amqp_transcript.rs  broker.rs  flags.rs  mod.rs  native_harness.rs  native_harness_tests.rs  output.rs  registry.rs  routing.rs  routing_tests.rs  scheduler.rs  shard.rs  storage.rs  storage_tests.rs  tests.rs
crates/aurum-broker/src/single_node/: broker.rs  config.rs  error.rs  error_map.rs  lifecycle.rs  metrics.rs  mod.rs  registry.rs  server.rs  service.rs  storage_backend.rs  tcp_tests.rs  tests.rs
crates/aurum-cli/: Cargo.toml
crates/aurum-cli/src/: main.rs
crates/aurum-concurrency/: Cargo.toml
crates/aurum-concurrency/src/: lib.rs
crates/aurum-core/: Cargo.toml
crates/aurum-core/src/: lib.rs
crates/aurum-core/src/consumer/: credit.rs  error.rs  flags.rs  id.rs  mod.rs  model.rs  request.rs  result.rs  segment.rs  session.rs  window.rs
crates/aurum-core/src/queue/: block.rs  constants.rs  error.rs  hybrid.rs  lists.rs  mod.rs  model.rs  state.rs  stats.rs  tests.rs  work.rs
crates/aurum-core/tests/: consumer_model_diff.rs  queue_invariants.rs  queue_model_diff.rs
crates/aurum-internal-protocol/: Cargo.toml
crates/aurum-internal-protocol/src/: batch.rs  error.rs  flags.rs  lib.rs  payload.rs  prelude.rs  route.rs  sink.rs
crates/aurum-internal-protocol/src/command/: consume.rs  control.rs  ingress.rs  mod.rs  publish.rs  settlement.rs  shard.rs
crates/aurum-internal-protocol/src/event/: confirm.rs  delivery.rs  error.rs  mod.rs
crates/aurum-intrusive/: Cargo.toml
crates/aurum-intrusive/src/: lib.rs
crates/aurum-kernels/: Cargo.toml
crates/aurum-kernels/src/: lib.rs
crates/aurum-plugin-api/: Cargo.toml
crates/aurum-plugin-api/src/: lib.rs
crates/aurum-protocol-amqp/: Cargo.toml
crates/aurum-protocol-amqp/src/: lib.rs  port.rs  test_support.rs
crates/aurum-protocol-amqp/src/harness/: in_memory.rs  mod.rs
crates/aurum-protocol-amqp/src/method/: basic.rs  bits.rs  channel.rs  confirm.rs  connection.rs  exchange.rs  mod.rs  queue.rs
crates/aurum-protocol-amqp/src/session/: amqp_session.rs  channel.rs  connection.rs  consumers.rs  content.rs  content_tests.rs  error.rs  mod.rs  route_cache.rs
crates/aurum-protocol-amqp/src/translate/: control.rs  errors.rs  mod.rs  outbound.rs
crates/aurum-protocol-amqp/src/wire/: codec.rs  constants.rs  error.rs  field_table.rs  frame.rs  longstr.rs  mod.rs  properties.rs  shortstr.rs
crates/aurum-protocol-native/: Cargo.toml
crates/aurum-protocol-native/src/: lib.rs  tests.rs
crates/aurum-protocol-native/src/adapter/: inbound.rs  mod.rs  outbound.rs  session.rs
crates/aurum-protocol-native/src/codec/: cursor.rs  mod.rs
crates/aurum-protocol-native/src/message/: consume.rs  delivery.rs  hello.rs  mod.rs  publish.rs  route.rs  settlement.rs
crates/aurum-protocol-native/src/wire/: constants.rs  error_code.rs  flags.rs  header.rs  mod.rs  op.rs
crates/aurum-routing/: Cargo.toml
crates/aurum-routing/src/: binding.rs  compiler.rs  config.rs  error.rs  exchange.rs  flags.rs  hash.rs  lib.rs  queue_set.rs  table.rs  tests.rs
crates/aurum-runtime/: Cargo.toml
crates/aurum-runtime/src/: lib.rs
crates/aurum-storage/: Cargo.toml
crates/aurum-storage/src/: config.rs  engine.rs  error.rs  flags.rs  ids.rs  lib.rs  tests.rs
crates/aurum-storage/src/ack_ledger/: log.rs  mod.rs
crates/aurum-storage/src/io/: std_file.rs
crates/aurum-storage/src/payload/: log.rs  mod.rs
crates/aurum-storage/src/queue_index/: log.rs  mod.rs
crates/aurum-storage/src/record/: checksum.rs  codec.rs  flags.rs  header.rs  kind.rs  mod.rs
crates/aurum-storage/src/recovery/: image.rs  mod.rs
crates/aurum-storage/src/segment/: mod.rs  scanner.rs
crates/aurum-transport/: Cargo.toml
crates/aurum-transport/src/: buffer.rs  config.rs  connection_id.rs  error.rs  lib.rs
crates/aurum-transport/src/tcp/: blocking.rs  connection.rs  listener.rs  mod.rs
crates/aurum-types/: Cargo.toml
crates/aurum-types/src/: lib.rs
docs/: AMQP_ADAPTER_ARCHITECTURE.md  AMQP_COMPATIBILITY_V0.md  AURUM_BROKER_PR10_SINGLE_NODE_SERVER_PLAN.md  AURUM_BROKER_PR5_IN_MEMORY_EXECUTOR_PLAN.md  AURUM_CORE_IMPLEMENTATION_PLAN.md  AURUM_CORE_PR2_MODEL_TESTING_PLAN.md  AURUM_CORE_PR3_RABBIT_DELIVERY_PLAN.md  AURUM_CORE_PR4_INTERNAL_COMMAND_PROTOCOL_PLAN.md  AURUM_PROTOCOL_AMQP_PR9_INITIAL_ADAPTER_PLAN.md  AURUM_PROTOCOL_NATIVE_PR7_MINIMAL_PROTOCOL_PLAN.md  AURUM_ROUTING_PR6_COMPILED_ROUTING_PLAN.md  AURUM_RUNTIME_PR11_THREAD_PER_CORE_PLAN.md  AURUM_STORAGE_PR8_APPEND_ONLY_STORAGE_PLAN.md  CONFIGURATION_V0.md  NATIVE_PROTOCOL_V0.md  PROJECT_VISION_AND_AI_CONTEXT.md  SINGLE_NODE_SERVER_MODEL.md  STORAGE_FORMAT_V0.md  STORAGE_RECOVERY_MODEL.md  WORKSPACE_ARCHITECTURE.md
examples/: single-node.toml
experiments/h1-queue-engine/: Cargo.toml
experiments/h1-queue-engine/src/: main.rs
experiments/h10-single-node-server/: Cargo.toml
experiments/h10-single-node-server/src/: main.rs
experiments/h2-consumer-session/: Cargo.toml
experiments/h2-consumer-session/src/: main.rs
experiments/h3-command-protocol/: Cargo.toml
experiments/h3-command-protocol/src/: main.rs
experiments/h4-in-memory-broker/: Cargo.toml
experiments/h4-in-memory-broker/src/: main.rs
experiments/h5-routing/: Cargo.toml
experiments/h5-routing/src/: main.rs
experiments/h6-native-protocol/: Cargo.toml
experiments/h6-native-protocol/src/: main.rs
experiments/h7-storage-engine/: Cargo.toml
experiments/h7-storage-engine/src/: main.rs
experiments/h8-amqp-adapter/: Cargo.toml
experiments/h8-amqp-adapter/src/: main.rs
scripts/: bench_h1.sh  check.sh  perf_h1.sh
