[package]
name = "aurum-internal-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
aurum-types.workspace = true
bitflags.workspace = true
smallvec = { workspace = true, features = ["union"] }

[lints]
workspace = true
