[package]
name = "aurum-routing"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
aurum-types.workspace = true
bitflags.workspace = true
smallvec = { workspace = true, features = ["union"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
