[package]
name = "aurum-storage"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
aurum-types.workspace = true
bitflags.workspace = true
crc32c.workspace = true
smallvec.workspace = true

[dev-dependencies]
tempfile = "3.25.0"

[lints]
workspace = true
