[package]
name = "h2-consumer-session"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
aurum-core.workspace = true
aurum-types.workspace = true

[[bin]]
name = "h2-consumer-session"
path = "src/main.rs"

[lints]
workspace = true
