[package]
name = "h3-command-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "h3-command-protocol"
path = "src/main.rs"

[dependencies]
aurum-types.workspace = true
aurum-internal-protocol.workspace = true
aurum-core.workspace = true
aurum-broker.workspace = true
smallvec = { workspace = true, features = ["union"] }

[lints]
workspace = true
